WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280882
cast-align warning on GCC for spanReinterpretCast
https://bugs.webkit.org/show_bug.cgi?id=280882
Summary
cast-align warning on GCC for spanReinterpretCast
Max Rottenkolber
Reported
2024-10-04 03:54:09 PDT
A cast-align warning on GCC for spanReinterpretCast from Source/WTF/wtf/StdLibExtras.h causes the build to fail on ARMv7.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-10-08 10:29:42 PDT
Committed
284837@main
(19cbafd537fe): <
https://commits.webkit.org/284837@main
> Reviewed commits have been landed. Closing PR #34694 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2024-10-08 10:30:17 PDT
<
rdar://problem/137520419
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug