[ARMv7] Muffle cast-align warning on GCC for spanReinterpretCast https://bugs.webkit.org/show_bug.cgi?id=280882

Reviewed by Justin Michaud.

GCC will complain about differing alignment requirements when casting
a 4-byte element span to a 8-byte element span on ARMv7.
(Causing the build to fail.)

Muffle that warning.

* Source/WTF/wtf/StdLibExtras.h:

Canonical link: https://commits.webkit.org/284837@main